Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
proton-c-0.18.1
Description
Calling stop from another thread fails to terminate a container when it is attempting to reconnect.
The attached reproducer never exits (or mostly never exits - I may have seen it do it once). I believe it should.
Attachments
Attachments
Issue Links
- duplicates
-
PROTON-1649 [cpp] Reconnecting container cannot be stopped from a scheduled task
- Closed