PROTON-1700: [C++ binding] Interrupt reconnect attempts when container stopped