proton-c/bindings/cpp/src/proactor_container_impl.cpp
@@ -281,6 +281,12 @@ void container::impl::reset_reconnect(pn_connection_t* pnc) {
 }
 
 bool container::impl::setup_reconnect(pn_connection_t* pnc) {
+    // If container stopping don't try to reconnect
+    // - we pretend to have set up a reconnect attempt so
+    //   that the proactor disconnect will finish and we will exit
+    //   the run loop without error.
+    if (stopping_) return true;
+
     connection_context& cc = connection_context::get(pnc);
     reconnect_context* rc = cc.reconnect_context_.get();
 
